added new-recipe and recipe and appropriate css

--- a/src/main/resources/templates/base.hbs
+++ b/src/main/resources/templates/base.hbs
@@ -29,7 +29,7 @@
             <a href="#">Home</a>
             <a href="#">Recipes</a>
             <div id="recipeOpt">
-                <a href="#">Add&nbsp;Recipe</a>
+                <a href="/new-recipe">Add&nbsp;Recipe</a>
                 <a href="/categories">Categories</a>
                 <a href="#">Favorites</a>
                 <a href="#"></a>
