--- a/src/main/resources/style/styles.css
+++ b/src/main/resources/style/styles.css
@@ -196,47 +196,51 @@ a:hover{
 /*CSS for new recipe form page*/
 
 .box1{
-	width:96%;
+	width:55%;
 	height:115px;
 	background-color:red;
 	margin:0 auto;
-	margin-top:30px;
+	margin-top:10px;
 	display:flex;
 	background-color:#FFCC66;
 	border-radius: 1rem 1rem 0 0;
 	border-top:thin black solid;
 	border-right:thin black solid;
 	border-left:thin black solid;
+	min-width:900px;
 
 }
 .box2{
 	display:flex;
-	width:96%;
-	height:600px;
+	width:55%;
+	height:625px;
 	background-color:#FFCC66;
 	margin:0 auto;
 	border-radius: 0 0 1rem 1rem;
 	border-bottom:thin black solid;
 	border-left:thin black solid;
 	border-right:thin black solid;
+	min-width:900px;
 
 
 }
 .box3{
-	width:20%;
+	width:25%;
 }
 .box4{
-	width:80%;
+	width:75%;
 	display:flex;
-	justify-content:center;
+	margin:0;
+	/*justify-content:center;*/
 
 }
 .bigBox{
 	width:100%;
-	height:30%;
+	height:17%;
 	display:flex;
 	align-items:center;
 	justify-content:center;
+	overflow:hidden;
 
 }
 .bigBoxBottom{
@@ -250,22 +254,21 @@ a:hover{
 
 .littleBox{
 	width:100%;
-	height:20%;
+	height:17%;
 	display:flex;
-	align-items:center;
 	justify-content:center;
 
 }
 .categoryArea{
 	margin:auto;
 	font-size:large;
-	padding:0 20px;
+	padding:0 15px;
 
 }
 .nameArea{
 	margin: auto;
 	font-size:large;
-	padding:0 50px;
+	padding:0 20px;
 	text-align:center;
 
 }
@@ -277,7 +280,7 @@ a:hover{
 .recipeButton{
 	margin:auto 1%;
 	background-color:transparent;
-	padding:10px 30px;
+	padding:10px 25px;
 
 	border:thin black solid;
 	font-size:large;
@@ -309,19 +312,23 @@ a:hover{
 }
 #sectionUpload, #sectionUploadBottom{
 	width: 70%;
-	height: 60px;
+	height: 80px;
 	margin: 10px;
 	padding:5px;
 	font-size:large;
 }
 #sectionUploadBottom{
-	height:100%;
+	height:80%;
 }
-#ctime{
+#cTime, #numServings, #rIngredients{
 	width:100%;
+
+}
+#rIngredients{
+	height:100px;
 }
 .bigBoxRight{
-	width: 90%;
+	width: 93%;
 	height: 70%;
 	margin: 10px;
 	padding:5px;
@@ -451,6 +458,71 @@ a:hover{
 	width: 200px;
 	height: 150px;
 }
+
+/*CSS for recipe page*/
+
+#editB{
+	height: 50px;
+	width: 200px;
+	margin:20px 15px;
+	padding:10px 25px;
+	background-color:transparent;
+	border:thin black solid;
+	font-size:15px;
+	cursor: pointer;
+}
+
+#editB:hover{
+	background-color:#CC6600;
+}
+
+#shareB{
+	height: 50px;
+	width: 200px;
+	margin:20px 15px;
+	padding:10px 25px;
+	background-color:transparent;
+	border:thin black solid;
+	font-size:15px;
+	cursor: pointer;
+}
+
+#shareB:hover{
+	background-color:#CC6600;
+}
+
+
+
+#nutritionC{
+	height: 10px;
+	width: 50%;
+	text-align: left;
+}
+
+#timeC{
+	height: 7px;
+	/*	width: 55%;   */
+}
+
+
+#ingredientC{
+	height: 230px;
+	/*	width: 55%;   */
+	text-align: left;
+
+}
+
+#instructionsC{
+	width: 75%;
+	text-align: left;
+
+}
+
+.recipeT tbody tr td{
+	padding: 10px;
+	text-align: center;
+}
+
 
 
 /*CSS of footer*/
